bug fix header element spacing for mobile
Former-commit-id: 7e4ab436ebb9a71e157a4f23e04b93e68c0c7d04

--- a/app/assets/scss/base/_template.scss
+++ b/app/assets/scss/base/_template.scss
@@ -123,6 +123,7 @@
 	//780 breakpoint is only used with the language-toggle element
 	@media screen and (max-width:780px) {
 		clear:both;
+		margin-left:10px;
 		h1.page-title {
 			font-size:16px;
 			line-height:1.25;
